# learning_high_performance

./: .gitignore  README.md  SPSC.cpp  generic_template_callback  generic_template_callback.cpp  memory_pool.cpp  pps_integrated_callbacks_claude.cpp  pps_qnx.cpp  pps_qnx_claude_app1_with_buffer.cpp  pps_qnx_claude_approach2.cpp  test_thread_sanitizer.cpp  thread_pool.cpp  thread_pool_simple_version.cpp  vector.cpp
Advanced_memory_management/: atomic_memory_fence.cpp
Architecture_And_DesignPattern/observer_advanced/: main.cpp  value_semantics_observer.h
Architecture_And_DesignPattern/pub_sub_mediator_event_bus/: dymanic_event_bus.h  dymanic_event_bus_subscription_handle.h  main.cpp  main_subscription.cpp  message.h
Architecture_And_DesignPattern/pub_sub_reactor/: CMakeLists.txt  Model.h  PPSManager.cpp  PPSManager.h  PPSReader.cpp  PPSReader.h  PPSWriter.cpp  PPSWriter.h  View.h  simple_pub_sub_pps.cpp
Architecture_And_DesignPattern/template_Observer/: main.cpp  template.h
Atomic/: memory_order_consume.cpp  modification_order.cpp  release_sequence.cpp
Benchmark/bench_Mat/: CMakeLists.txt  main.cpp
Benchmark/bench_profiling_cache_misses_with_custom_mat/: CMakeLists.txt  main  main.cpp  profile.sh
Building_lowlatency_application_cpp/Chapter10/: CMakeLists.txt
Building_lowlatency_application_cpp/Chapter10/common/: CMakeLists.txt  mcast_socket.cpp  socket_utils.cpp  socket_utils.h  types.h
Building_lowlatency_application_cpp/Chapter10/exchange/: CMakeLists.txt
Building_lowlatency_application_cpp/Chapter10/exchange/market_data/: snapshot_synthesizer.h
Building_lowlatency_application_cpp/Chapter10/exchange/matcher/: matching_engine.cpp  matching_engine.h  me_order_book.h
Building_lowlatency_application_cpp/Chapter10/exchange/order_server/: fifo_sequencer.h  order_server.h
Building_lowlatency_application_cpp/Chapter10/trading/: CMakeLists.txt  trading_main.cpp
Building_lowlatency_application_cpp/Chapter10/trading/market_data/: market_data_consumer.cpp  market_data_consumer.h
Building_lowlatency_application_cpp/Chapter10/trading/strategy/: feature_engine.h  liquidity_taker.cpp  liquidity_taker.h  market_maker.cpp  market_maker.h  market_order_book.cpp  market_order_book.h  order_manager.cpp  order_manager.h  position_keeper.h  risk_manager.cpp  risk_manager.h  trade_engine.cpp  trade_engine.h
Building_lowlatency_application_cpp/Chapter3/: compile_time_polymorphism.cpp  pointer_alias.cpp  strict_alias.cpp
Building_lowlatency_application_cpp/Chapter4/: CMakeLists.txt  lockfree_queue_example.cpp  (+13 more)
Building_lowlatency_application_cpp/Chapter6/: CMakeLists.txt  client_request.h  client_response.h  exchange_main.cpp  logging.h  market_update.h  matching_engine.cpp  matching_engine.h  me_order.cpp  me_order.h  me_order_book.cpp  me_order_book.h  memory_pool.h  types.h
Building_lowlatency_application_cpp/Chapter6/common/: lockfree_queue.h  logging.h  mcast_socket.cpp  mcast_socket.h  socket_utils.cpp  socket_utils.h  tcp_server.cpp  types.h
Building_lowlatency_application_cpp/Chapter6/market_data/: market_data_publisher.cpp  market_data_publisher.h  snapshot_synthesizer.h
Building_lowlatency_application_cpp/Chapter6/order_server/: fifo_sequencer.h  order_server.cpp  order_server.h
Building_lowlatency_application_cpp/Chapter7/: CMakeLists.txt  build.sh
Building_lowlatency_application_cpp/Chapter7/common/: CMakeLists.txt  mcast_socket.cpp
Building_lowlatency_application_cpp/Chapter7/exchange/: CMakeLists.txt  exchange_main.cpp
Building_lowlatency_application_cpp/Chapter7/exchange/market_data/: market_data_publisher.cpp  market_data_publisher.h  snapshot_synthesizer.cpp  snapshot_synthesizer.h
Building_lowlatency_application_cpp/Chapter7/exchange/matcher/: matching_engine.h  me_order.h  me_order_book.h
Building_lowlatency_application_cpp/Chapter7/exchange/order_server/: client_request.h  client_response.h  fifo_sequencer.h
Effective_modern_cpp/: decltype_with_universal_reference.cpp  knowing_deduced_type.cpp
HazardPointer/: hazard_pointer_chatgpt.cpp
HazardPointer_RCU/: ABAproblem.cpp  RCU_using_hazard_pointers.cpp  RCU_using_read_lock_unlock.cpp  hazard_pointer.cpp
LockFree/: CMakeLists.txt  LFQueue_Cpp_high_performance.cpp  exchangebuffer.h  fifo3.h  fifo4.h  fifo5.h  lockfree.cpp  lockfree_bench.cpp  lockfree_queue_hft_interview.h  lockfreequeue.h  lockfreequeue_maybetrash.h
Mutex&LockFree/: FramePool.h  RingBuffer.cpp  RingBufferMutex.cpp  RingBuffer_Gemini.cpp  fifo1.h  frame_pool.h  lockfree_bench.cpp  messagequeue.h
Practice/: fifo3.h  lockfreequeue.cpp  lockfreestack_naive.cpp  priority_queue_sample.cpp  simplebench.cpp  simplebench_2.cpp  test_google_bench_mark.cpp
Practice/20251010/: CMakeLists.txt  main.cpp
Practice/20251010/common/: bench.h
Practice/20251011/: CMakeLists.txt  main.cpp
Practice/20251011/common/: lockfreequeue.h
Practice/20251012/: CMakeLists.txt  main.cpp
Practice/simple_client_server/: CMakeLists.txt  main.cpp
Practice/simple_client_server/common/: CMakeLists.txt  lockfree_queue.h  logging.h  macros.h  socket_utils.cpp  socket_utils.h  tcp_server.cpp  tcp_server.h  tcp_socket.cpp  tcp_socket.h  time_utils.h
Practice/thread_future_promise_packaged_task/: CMakeLists.txt  P1_hello_async.cpp  P1_hello_async_my_version.cpp  future_wait_for.cpp  reader_writer.cpp  thread_pool.cpp
Problems/: atomic_is_not_constructible.cpp
SPSC/: CMakeLists.txt  SPSC.cpp  SPSC.h  SPSC_bench.cpp
The_art_of_writing_efficient_programs/chapter3/: CMakeLists.txt  benchmark.cpp  branch_less.cpp  branch_prediction.cpp
The_art_of_writing_efficient_programs/chapter4/: CMakeLists.txt  list_vector.cpp  memory_architecture.cpp
The_art_of_writing_efficient_programs/chapter9/: CMakeLists.txt  memory_bench.cpp  vector_sort.cpp
gtest/: CMakeLists.txt  StringUtil.h  main.cpp
slogger2/: CMakeLists.txt  lockfree_queue_multithread_in_push_using_reference_counting.h  slogger.cpp
testPPS/: pps_qnx_2.cpp  pps_qnx_MPMC_gemini.cpp  pps_qnx_claude_approach1.cpp  pps_qnx_gemini.cpp  pps_use_after_free_problem_and_fixed.cpp
(+134 files in other folders)
