cmake_minimum_required(VERSION 3.28)
project(20251012)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED true)
set(CMAKE_CXX_COMPILER "/usr/bin/clang++-17")
set(CMAKE_CXX_FLAGS "-std=c++2a -O3 -g -mavx2 -Wall -pedantic -lrt -lm")
add_executable(${PROJECT_NAME} main.cpp)

find_package(benchmark REQUIRED)
target_link_libraries(${PROJECT_NAME} benchmark::benchmark)